projects/compiler/test/typechecker/if/error_no_else_block.out
Error at %FILE_NAME%:1:9
Incomplete if-else expression
  |  val a = if true 123
             ^
The else-block must exist and contain a value
